[FAQ] Fix incorrect alignments

--- a/css/faq.css
+++ b/css/faq.css
@@ -77,7 +77,8 @@ ol {
 }
 #eosd_files {
     overflow: hidden;
-    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 #back {
     float: left;
@@ -131,6 +132,12 @@ ol {
 #UM_image {
     background-position: -900px 0px;
 }
+@media only screen and (max-width: 1800px) {
+    #eosd_files {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
 @media only screen and (min-width: 1000px) and (max-width: 1225px) {
     .wrap {
         margin-left: 5%;
@@ -140,6 +147,10 @@ ol {
 @media only screen and (max-width: 1000px) {
     #wrap {
         font-size: 11px;
+    }
+    #eosd_files {
+        margin-left: 0%;
+        margin-right: 0%;
     }
 }
 @media only screen and (((min-width: 320px) and (max-width: 800px) and (orientation: portrait)) or ((min-width: 480px) and (max-width: 640px) and (orientation: landscape))) {
